# vue-admin-serve

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  env.sh  gunicorn.conf.py  justfile  manage.py  menu.json  menu.sql  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-app.yml
admin/: ninja.py  serializers.py  urls.py  views.py
admin_backend/: admin.py  app_permission.py  apps.py  asgi.py  models.py  ninja.py  serializers.py  settings.py  swagger_view.py  urls.py  util.py  views.py  views_api.py  views_user_role_permission.py  wsgi.py
admin_backend/business/: amaz_price_and_rank.py
admin_backend/migrations/: 0001_initial.py
amaz_products/: blue_ocean.txt  keepatime.py  serializers.py  views.py  views_user_role_permission.py
amaz_products/business/: computer_hardware.py
amaz_products/migrations/: 0001_initial.py
data/: permission.json  role.json  role_permissions.json  user_roles_role.json
ecomm/: asgi.py  settings.py  urls.py  views.py  wsgi.py
templates/admin/: base_site.html
templates/rest_framework/: api.html
tests/: test_user.py
